--- a/rockPaper/index.html
+++ b/rockPaper/index.html
@@ -21,8 +21,8 @@
     <body>
         <div id="main">
             <div id="header">
-                <div class="scores" id="score_computer">0</div>
-                <div class="scores" id="score_you">0</div>
+                <div style="background:#fca311;" class="scores" id="score_computer">0</div>
+                <div style="background:#6a040f;" class="scores" id="score_you">0</div>
             </div>
             <div class="buttons" id="b_scissor"></div>
             <div class="buttons" id="b_paper"></div>
