--- a/stickHero/index.html
+++ b/stickHero/index.html
@@ -11,9 +11,10 @@
         <div class="container">
             <div id="score"></div>
             <canvas id="game" width="375" height="375"></canvas>
-            <div id="introduction">Hold down the finger to stretch out a stick</div>
+            <div id="introduction">Hold down the mouse to stretch out a stick</div>
             <div id="perfect">DOUBLE SCORE</div>
             <button id="restart">RESTART</button>
+            <button id="start">RAISE</button>
           </div>
           <script type="text/javascript" src="index.js"></script>
     </body>
