--- a/stickHero/index.html
+++ b/stickHero/index.html
@@ -7,7 +7,7 @@
   
     </head>
 
-    <body>
+    <body onselectstart="return false">
         <div class="container">
             <div id="score"></div>
             <canvas id="game" width="375" height="375"></canvas>
