--- a/stickHero/index.html
+++ b/stickHero/index.html
@@ -14,7 +14,7 @@
             <div id="introduction">Hold down the mouse to stretch out a stick</div>
             <div id="perfect">DOUBLE SCORE</div>
             <button id="restart">RESTART</button>
-            <button id="start">RAISE</button>
+            <button id="start" onselectstart="return false">RAISE</button>
           </div>
           <script type="text/javascript" src="index.js"></script>
     </body>
