--- a/stickHero/index.html
+++ b/stickHero/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div id="score"></div>
             <canvas id="game" width="375" height="375"></canvas>
-            <div id="introduction">Hold down the mouse to stretch out a stick</div>
+            <div id="introduction">Hold down the raise button to stretch out a stick</div>
             <div id="perfect">DOUBLE SCORE</div>
             <button id="restart">RESTART</button>
             <button id="start" onselectstart="return false">RAISE</button>
