--- a/WordSuffle/index.html
+++ b/WordSuffle/index.html
@@ -4,7 +4,7 @@
      <link rel="stylesheet" type="text/css" href="index.css">
 
   <script type="text/javascript" src="index.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1", user-scalable="no" >
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" >
     <meta charset="utf-8">
 </head>
 <body>
