--- a/BlueDrone/index.html
+++ b/BlueDrone/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Stick Hero</title>
         <link rel="stylesheet" type="text/css" href="index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" >
 
       
     </head>
