--- a/TheCube/index.html
+++ b/TheCube/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>TheCube</title>
+        <meta name="viewport" content= "width=device-width, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="index.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.min.js"></script>
       
